# fedps

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
fedps/model/: bayes.py  kmeans.py
fedps/preprocessing/: _power.py  discretizer.py  encoder.py  imputer.py  scaler.py  transformer.py
fedps/stats/: frequent.py  mean_var.py  min_max.py  quantile.py  sum.py  union.py
