[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fedps"
version = "0.1.0"
dependencies = [
    "scikit-learn~=1.7",
    "numpy>=1.20",
    "datasketches",
    "pyzmq",
]
requires-python = ">=3.10"
description = "Federated data Preprocessing via aggregated Statistics"
readme = "README.md"
keywords = [
    "Data Preprocessing",
    "Federated Learning",
    "Aggregated Statistics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
]

[project.urls]
Source = "https://github.com/xuefeng-xu/fedps"
Tracker = "https://github.com/xuefeng-xu/fedps/issues"
